--- a/src/css/2-snackbar.css
+++ b/src/css/2-snackbar.css
@@ -15,7 +15,7 @@ h1 {
     font-size: 36px;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: #0aee4e;
+    color: orange;
     margin-bottom: 72px;
 }
 
@@ -65,6 +65,6 @@ button {
 }
 
 button:hover {
-    background-color: #6c8cff;
+    background-color: #970c36;
     cursor: pointer;
 }
